--- a/home.html
+++ b/home.html
@@ -870,7 +870,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Ashu</div>
-                                       <div class="list-staff__categories">Languages: Punjabi, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Punjabi, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -901,7 +901,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Adnan</div>
-                                       <div class="list-staff__categories">Languages: Bengali, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Bengali, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -932,7 +932,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Noor</div>
-                                       <div class="list-staff__categories">Languages: Bengali, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Bengali, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -963,7 +963,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Areeb</div>
-                                       <div class="list-staff__categories">Languages: Urdu, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Urdu, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -993,7 +993,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Abdulla</div>
-                                       <div class="list-staff__categories">Languages: Arabic, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Arabic, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1023,7 +1023,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Herlyn</div>
-                                       <div class="list-staff__categories">Languages: Spanish, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Spanish, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1053,7 +1053,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Dylan</div>
-                                       <div class="list-staff__categories">Languages: Sinhala, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Sinhala, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1083,7 +1083,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Ray</div>
-                                       <div class="list-staff__categories">Languages: Spanish, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Spanish, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1113,7 +1113,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Junaid</div>
-                                       <div class="list-staff__categories">Languages: Creole, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Creole, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1135,15 +1135,15 @@
                                  <ul class="list-staff__social list-inline">
                                    <!-- <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
-                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/jmasterrr/#"></a></li>
+                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/d1no14/"></a></li>
                                  </ul>
                               </div>
                               <!-- end list-staff__media -->
                               <div class="list-staff__inner">
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
-                                       <div class="list-staff__name">Jafar</div>
-                                       <div class="list-staff__categories">Languages: Bengali, English</div>
+                                       <div class="list-staff__name">Dino</div>
+                                       <div class="list-staff__categories">Languages Spoken: Tamil,Sinhala, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1173,7 +1173,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Sunny</div>
-                                       <div class="list-staff__categories">Languages: Punjabi, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Punjabi, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1203,7 +1203,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Henry</div>
-                                       <div class="list-staff__categories">Languages: Mandarin, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Mandarin, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1233,7 +1233,7 @@
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
                                        <div class="list-staff__name">Ishan</div>
-                                       <div class="list-staff__categories">Languages: Hindi, English</div>
+                                       <div class="list-staff__categories">Languages Spoken: Hindi, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1255,15 +1255,15 @@
                                  <ul class="list-staff__social list-inline">
                                    <!-- <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
-                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/jeancarlos25/#"></a></li>
+                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/sharanbingoat/"></a></li>
                                  </ul>
                               </div>
                               <!-- end list-staff__media -->
                               <div class="list-staff__inner">
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
-                                       <div class="list-staff__name">Jean</div>
-                                       <div class="list-staff__categories">Languages: Spanish, English</div>
+                                       <div class="list-staff__name">Sharan</div>
+                                       <div class="list-staff__categories">Languages Spoken:  Tamil, Sinhala, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1285,15 +1285,15 @@
                                  <ul class="list-staff__social list-inline">
                                    <!-- <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
-                                    <li><a class="icon fa fa-instagram" href="javascript:void(0);"></a></li>
+                                    <li><a class="icon fa fa-instagram" href="https://instagram.com/nextlanesumaiya"></a></li>
                                  </ul>
                               </div>
                               <!-- end list-staff__media -->
                               <div class="list-staff__inner">
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
-                                       <div class="list-staff__name">Coming Soon</div>
-                                       <div class="list-staff__categories">Languages: Coming Soon</div>
+                                       <div class="list-staff__name">Sumaiya</div>
+                                       <div class="list-staff__categories">Languages Spoken: Bengali, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
@@ -1315,15 +1315,15 @@
                                  <ul class="list-staff__social list-inline">
                                    <!-- <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
-                                    <li><a class="icon fa fa-instagram" href="javascript:void(0);"></a></li>
+                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/azm_ak_/"></a></li>
                                  </ul>
                               </div>
                               <!-- end list-staff__media -->
                               <div class="list-staff__inner">
                                  <div class="list-staff__info">
                                     <div class="list-staff__wrap_name">
-                                       <div class="list-staff__name">Coming Soon</div>
-                                       <div class="list-staff__categories">Languages: Coming Soon</div>
+                                       <div class="list-staff__name">Azim</div>
+                                       <div class="list-staff__categories">Languages Spoken: Bengali, English</div>
                                     </div>
                                     <div class="decor-1"></div>
                                     <div class="list-staff__description">
