--- a/home.html
+++ b/home.html
@@ -410,32 +410,32 @@
                                        <div class="row">
                                           <div class="col-md-5">
                                              <div class="slider-grid__inner slider-grid__inner_mod-a">
-                                                <img class="img-responsive" src="assets/media/slider-grid/5.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
-                                                <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$</span> </div>
+                                                <img class="img-responsive" src="assets/extracted_images/kiak4ex.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
+                                                <div class="slider-grid__wrap-name"> <span class="slider-grid__name">KIA K4 EX</span> <span class="slider-grid__price">$229 a month</span> </div>
                                              </div>
                                           </div>
                                           <div class="col-md-7">
                                              <div class="row">
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">McLaren 650S</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/hyundaielantra.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Hyundai Elantra Limited</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$249 a month</span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
                                                 </div>
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/2.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Jaguar XE 2016</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/mercedesc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes C300</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$499 a month </span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
@@ -444,24 +444,36 @@
                                              <div class="row">
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/3.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes Benz C Class</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/mercedesc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes GLC300</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$595 a month</span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
                                                 </div>
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/4.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Audi A6 Saloon</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/bmw330i.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">BMW 330i</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$549 a month </span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
+                                                         </ul>
+                                                      </div>
+                                                   </div>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                   <div class="slider-grid__inner slider-grid__inner_mod-b">
+                                                      <img class="img-responsive" src="assets/extracted_images/bmw330i.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">BMW X1</span>
+                                                      <div class="slider-grid__hover">
+                                                         <span class="slider-grid__price">$499 a month </span>
+                                                         <ul class="slider-grid__info list-unstyled">
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
@@ -475,32 +487,32 @@
                                        <div class="row">
                                           <div class="col-md-5">
                                              <div class="slider-grid__inner slider-grid__inner_mod-a">
-                                                <img class="img-responsive" src="assets/media/slider-grid/5.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
-                                                <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$</span> </div>
+                                                <img class="img-responsive" src="assets/extracted_images/kiak4ex.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
+                                                <div class="slider-grid__wrap-name"> <span class="slider-grid__name">KIA K4 EX</span> <span class="slider-grid__price">$229 a month</span> </div>
                                              </div>
                                           </div>
                                           <div class="col-md-7">
                                              <div class="row">
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">McLaren 650S</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/hyundaielantra.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Hyundai Elantra Limited</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$249 a month</span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
                                                 </div>
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/2.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Jaguar XE 2016</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/mercedesc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes C300</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$499 a month </span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
@@ -509,24 +521,36 @@
                                              <div class="row">
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/3.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes Benz C Class</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/mercedesc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes GLC300</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$595 a month</span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
                                                 </div>
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/media/slider-grid/4.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Audi A6 Saloon</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/bmw330i.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">BMW 330i</span>
                                                       <div class="slider-grid__hover">
-                                                         <span class="slider-grid__price">$</span>
+                                                         <span class="slider-grid__price">$549 a month </span>
                                                          <ul class="slider-grid__info list-unstyled">
-                                                            <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                            <li><i class="icon icon-paper-plane"></i>2024</li>
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
+                                                         </ul>
+                                                      </div>
+                                                   </div>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                   <div class="slider-grid__inner slider-grid__inner_mod-b">
+                                                      <img class="img-responsive" src="assets/extracted_images/bmw330i.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">BMW X1</span>
+                                                      <div class="slider-grid__hover">
+                                                         <span class="slider-grid__price">$499 a month </span>
+                                                         <ul class="slider-grid__info list-unstyled">
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
                                                          </ul>
                                                       </div>
                                                    </div>
