--- a/home.html
+++ b/home.html
@@ -330,7 +330,8 @@
                         <div class="container">
                            <div class="row">
                               <div class="col-xs-12">
-                                 <h2 class="ui-title-block">Latest Offers</h2>
+                                 <h2 class="ui-title-block">LATEST LEASE OFFERS</h2>
+                                 <p>This lease offer includes capitalized cost reduction, taxes, loyalty rebates if applicable fees. The offer is subject to credit approval and may vary based on individual qualifications. Monthly payments are calculated based on the adjusted capitalized cost, which reflects the applied reduction. Additional fees may apply at lease signing, including but not limited to registration, documentation, and acquisition fees.</p>
                                 <!-- <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortor suspendisse potena quisue</div> -->
                                  <div class="slider-grid owl-carousel owl-theme owl-theme_mod-c enable-owl-carousel"
                                     data-pagination="true"
@@ -379,7 +380,7 @@
                                              <div class="row">
                                                 <div class="col-sm-6">
                                                    <div class="slider-grid__inner slider-grid__inner_mod-b">
-                                                      <img class="img-responsive" src="assets/extracted_images/mercedesc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes GLC300</span>
+                                                      <img class="img-responsive" src="assets/extracted_images/mercedesglc300.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes GLC300</span>
                                                       <div class="slider-grid__hover">
                                                          <span class="slider-grid__price">$595 a month</span>
                                                          <ul class="slider-grid__info list-unstyled">
@@ -401,12 +402,24 @@
                                                       </div>
                                                    </div>
                                                 </div>
+                                                <div class="col-sm-6">
+                                                   <div class="slider-grid__inner slider-grid__inner_mod-b">
+                                                      <img class="img-responsive" src="assets/extracted_images/bmwx1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">BMW X1</span>
+                                                      <div class="slider-grid__hover">
+                                                         <span class="slider-grid__price">$499 a month </span>
+                                                         <ul class="slider-grid__info list-unstyled">
+                                                            <li><i class="icon icon-speedometer"></i>NEW</li>
+                                                            <li><i class="icon icon-paper-plane"></i>2025</li>
+                                                         </ul>
+                                                      </div>
+                                                   </div>
+                                                </div>
                                              </div>
                                           </div>
                                        </div>
                                     </div>
                                     <!-- end slider-grid__item -->
-                                    <div class="slider-grid__item">
+                                   <!-- <div class="slider-grid__item">
                                        <div class="row">
                                           <div class="col-md-5">
                                              <div class="slider-grid__inner slider-grid__inner_mod-a">
@@ -481,9 +494,9 @@
                                              </div>
                                           </div>
                                        </div>
-                                    </div>
+                                    </div> -->
                                     <!-- end slider-grid__item -->
-                                    <div class="slider-grid__item">
+                                   <!-- <div class="slider-grid__item">
                                        <div class="row">
                                           <div class="col-md-5">
                                              <div class="slider-grid__inner slider-grid__inner_mod-a">
@@ -558,7 +571,7 @@
                                              </div>
                                           </div>
                                        </div>
-                                    </div>
+                                    </div> -->
                                     <!-- end slider-grid__item --> 
                                  </div>
                                  <!-- end slider-services --> 
